Config file fix

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -43,4 +43,7 @@ jobs:
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Test with pytest
         run: |
-          python3 main.py
+          echo(${{matrix.python-version}})
+          echo(${{python-version[0]}})
+          echo(${{python-version[1]}})
+          if [${{matrix.python-version}} -nq 2.7]; then python main.py else python3 main.py fi
