Config file fix v10

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -43,10 +43,4 @@ jobs:
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Test with pytest
         run: |
-          if ["${{ matrix.python-version }}" != "2.7" ]; then 
-            echo("${{ matrix.python-version }}")  
-            python3 main.py 
-          else 
-            echo("2.7")  
-            python main.py 
-          fi
+          python3 main.py || python main.py
